# LearningMasteringAlgorithms-C

./: CMakeLists.txt  README.md
Example/: CMakeLists.txt
dirent/: url.txt
include/: directls.h
source/: huffman.c  lz77.c  transfer.c
